<resources>

    <string name="app_name">Malaysia Prayer Times</string>
    <string name="app_name_short">Prayer Times</string>

    <string name="label_extension_permission">add extensions to Malaysia Prayer Times</string>
    <string name="label_extension_description">Allows to add extensions to Malaysia Prayer Times</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_retry">Retry</string>
    <string name="label_settings">Settings</string>

    <!-- AzanPickerActivity -->

    <string name="label_alarm">Alarm</string>
    <string name="label_none">None</string>

    <!-- ExtensionsActivity -->

    <string name="label_extensions">Prayer Screens</string>
    <string name="label_uninstall">Uninstall</string>

    <!-- NotificationActivity -->

    <string name="label_notification">Notification</string>
    <string name="label_set_notification_tone">Set notification tone…</string>
    <string name="label_set_reminder_tone">Set reminder tone…</string>
    <string name="label_vibrate">Vibrate</string>

    <!-- NotificationHelper -->

    <string name="notification_prayer_normal">Prayer time is now %s.</string>
    <string name="notification_prayer_others">It is now %s.</string>
    <string name="notification_reminder_soon">It will be %1$s in a moment.</string>

    <plurals name="notification_reminder">
        <item quantity="one">It will be %1$s in %2$s minute.</item>
        <item quantity="other">It will be %1$s in %2$s minutes.</item>
    </plurals>

    <!-- SettingsActivity -->

    <string name="label_3d_compass">Enable 3D compass</string>
    <string name="label_about">About</string>
    <string name="label_alarm_offset">Alarm offset</string>
    <string name="label_build">Build number</string>
    <string name="label_configure_notifications">Configure notifications</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_hide_notification">Hide prayer notification</string>
    <string name="label_hijri_offset">Hijri date offset</string>
    <string name="label_interface">Interface</string>
    <string name="label_miscellaneous">Miscellaneous</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_prayer_screen">Prayer screen</string>
    <string name="label_show_reminder">Show prayer reminder</string>
    <string name="label_review">Rate and review MPT</string>
    <string name="label_review_summary">Rate and review MPT on Google Play</string>
    <string name="label_theme">Theme</string>
    <string name="label_theme_dark">Dark</string>
    <string name="label_version">Version</string>

    <!-- Widgets -->

    <string name="label_date">%1$d %2$s %3$d</string>
    <string name="label_date_short">%1$d %2$s</string>
    <string name="label_widget_bar">Prayer Times Bar</string>

    <string-array name="pref_alarm_offset">
        <item>15 minutes earlier</item>
        <item>10 minutes earlier</item>
        <item>5 minutes earlier</item>
        <item>No offset</item>
        <item>5 minutes later</item>
        <item>10 minutes later</item>
        <item>15 minutes later</item>
    </string-array>

    <string-array name="pref_alarm_offset_values" translatable="false">
        <item>-900000</item>
        <item>-600000</item>
        <item>-300000</item>
        <item>0</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
    </string-array>

    <string-array name="pref_hijri_offset">
        <item>-2 days</item>
        <item>-1 day</item>
        <item>No offset</item>
        <item>+1 day</item>
        <item>+2 days</item>
    </string-array>

    <string-array name="pref_hijri_offset_values" translatable="false">
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_notification_clear">
        <item>Notification never hidden</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
    </string-array>

    <string-array name="pref_reminder_appear">
        <item>No reminder shown</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
    </string-array>

    <string-array name="pref_duration_values" translatable="false">
        <item>0</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1200000</item>
        <item>1800000</item>
        <item>2700000</item>
        <item>3600000</item>
    </string-array>

</resources>
